--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "codestash-v2",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -13,6 +14,7 @@
     "@codemirror/lang-javascript": "^6.2.2",
     "@codemirror/state": "^6.4.1",
     "@codemirror/view": "^6.33.0",
+    "@google/generative-ai": "^0.19.0",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
@@ -29,8 +31,9 @@
     "dotenv": "^16.4.5",
     "favicons-scraper": "^1.3.2",
     "firebase": "^10.12.3",
-    "framer-motion": "^11.3.31",
+    "ioredis": "^5.4.1",
     "lucide-react": "^0.408.0",
+    "mongodb": "^6.9.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
@@ -46,9 +49,14 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.0",
+    "css-loader": "^7.1.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "next-transpile-modules": "^10.0.1",
     "postcss": "^8",
+    "postcss-loader": "^8.1.1",
+    "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
