--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
     "@codemirror/view": "^6.33.0",
     "@google/generative-ai": "^0.19.0",
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-radio-group": "^1.2.1",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@uiw/react-codemirror": "^4.23.2",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
@@ -37,6 +40,7 @@
     "mongodb": "^6.9.0",
     "next": "14.2.5",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
