--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
+    "favicon-fetcher": "^0.0.9",
     "favicons-scraper": "^1.3.2",
     "firebase": "^10.12.3",
     "ioredis": "^5.4.1",
     "lucide-react": "^0.408.0",
     "mongodb": "^6.9.0",
     "next": "14.2.5",
+    "node-fetch": "^3.3.2",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
